force-app/main/default/objects/custom_create209__c/custom_create209__c.object-meta.xml
<CustomObject>
    <label>Custom created object209</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects209</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>