force-app/main/default/objects/custom_create209__c/fields/custom_create_209field600__c.field-meta.xml
<CustomField>
    <fullName>custom_create_209field600__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 209field600</label>
    <type>Checkbox</type>
</CustomField>